--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Junhui", "He", , "hejh22@mails.tsinghua.edu.cn", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
@@ -14,7 +13,8 @@ Suggests:
 Config/testthat/edition: 3
 Imports: 
     Rcpp,
-    RcppEigen
+    RcppEigen,
+    splines
 LinkingTo:
     Rcpp,
     RcppEigen
