--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Config/testthat/edition: 3
 Imports: 
     Rcpp,
     RcppEigen,
-    splines
+    splines,
+    methods
 LinkingTo:
     Rcpp,
     RcppEigen
