--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export(ebars)
 import(RcppEigen)
 importFrom(Rcpp,evalCpp)
+importFrom(methods,new)
 importFrom(splines,bs)
 useDynLib(EBARS, .registration = TRUE)
