--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,14 @@
 
 export(binebars)
 export(ebars)
+export(manifold_fitting)
 export(tensor_spline)
 import(RcppEigen)
 importFrom(Rcpp,evalCpp)
 importFrom(methods,new)
 importFrom(splines,bs)
+importFrom(stats,dist)
+importFrom(stats,nlm)
+importFrom(stats,optim)
+importFrom(vegan,isomap)
 useDynLib(EBARS, .registration = TRUE)
