add posterior samples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,7 @@ import(RcppEigen)
 importFrom(Rcpp,evalCpp)
 importFrom(methods,new)
 importFrom(splines,bs)
+importFrom(stats,dist)
 importFrom(stats,optim)
+importFrom(vegan,isomap)
 useDynLib(EBARS, .registration = TRUE)
