add trivariate cases

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(binebars)
 export(ebars)
 export(manifold_fitting)
 export(tensor_spline)
+export(tri_tensor_spline)
+export(triebars)
 import(RcppEigen)
 importFrom(Rcpp,evalCpp)
 importFrom(methods,new)
